--- a/KunstmaanShakerMenu/build.gradle
+++ b/KunstmaanShakerMenu/build.gradle
@@ -36,3 +36,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.squareup:seismic:1.0.2'
 }
+apply plugin: 'android-maven'
+apply plugin: 'com.jfrog.bintray'
+apply from: '../publish.gradle'
