--- a/publish.gradle
+++ b/publish.gradle
@@ -79,6 +79,7 @@ bintray {
     pkg {
         repo = bintrayRepo
         name = bintrayName
+        userOrg = 'kunstmaanaccenture'
         desc = libraryDescription
         websiteUrl = siteUrl
         vcsUrl = gitUrl
