--- a/kunstmaan-shaker-menu/build.gradle
+++ b/kunstmaan-shaker-menu/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.squareup:seismic:1.0.2'
+    implementation 'com.squareup:seismic:1.0.2'
 }
 apply plugin: 'android-maven'
 apply plugin: 'com.jfrog.bintray'
